--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fastify/autoload": "^6.0.0",
     "@fastify/sensible": "^6.0.0",
     "@infisical/sdk": "^4.0.5",
+    "@noble/hashes": "^2.0.1",
     "dotenv": "^17.2.3",
     "ethers": "^6.16.0",
     "fastify": "^5.0.0",
