--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,44 @@
 version: "3.1"
 
 services:
-  # Servicio de la aplicación Fastify
   fastify-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: fastify-key-management
     environment:
-      - NODE_ENV=production
-      - SECRETS_PATH=${SECRETS_PATH:-/app/secrets/secrets.json}
-      # Variables para Hot Storage (SDK usado en /create-shares y /recovery)
-      - INFISICAL_HOT_PROJECT_ID=${INFISICAL_PROJECT_ID}
-      - INFISICAL_HOT_CLIENT_ID=${INFISICAL_CLIENT_ID}
-      - INFISICAL_HOT_CLIENT_SECRET=${INFISICAL_CLIENT_SECRET}
-      # Variables para Cold Storage (SDK usado en todos los endpoints)
-      - INFISICAL_COLD_PROJECT_ID=${INFISICAL_COLD_PROJECT_ID}
-      - INFISICAL_COLD_CLIENT_ID=${INFISICAL_COLD_CLIENT_ID}
-      - INFISICAL_COLD_CLIENT_SECRET=${INFISICAL_COLD_CLIENT_SECRET}
-      - INFISICAL_ENVIRONMENT=${INFISICAL_ENV:-dev}
-    ports:
-      - "3000:3000"
-    volumes:
-      - infisical-secrets:/app/secrets:ro # Montaje en modo solo lectura
-    networks:
-      - infisical-network
-    depends_on:
-      - infisical-agent
-    restart: unless-stopped
+      # Credenciales para que el SDK de la App maneje el Share 2
+      - HOT_PROJECT_ID=${HOT_PROJECT_ID}
+      - HOT_CLIENT_ID=${HOT_CLIENT_ID}
+      - HOT_CLIENT_SECRET=${HOT_CLIENT_SECRET}
 
-  # Agente de Infisical para Hot Storage
-  infisical-agent:
-    image: infisical/cli:0.18.0
-    container_name: infisical-agent-hot
+      # Credenciales para que el SDK de la App maneje el Share 3
+      - COLD_PROJECT_ID=${COLD_PROJECT_ID}
+      - COLD_CLIENT_ID=${COLD_CLIENT_ID}
+      - COLD_CLIENT_SECRET=${COLD_CLIENT_SECRET}
+
+      # Ruta del JSON generado por el Agente (Configuración general)
+      - SECRETS_PATH=/app/secrets/config.json
+      - INFISICAL_ENV=${INFISICAL_ENV}
+    volumes:
+      - "infisical-config-vol:/app/secrets:ro"
+    depends_on:
+      - config-agent
+
+  config-agent:
+    image: "infisical/cli:0.18.0"
+    container_name: infisical-agent-config
     environment:
-      - INFISICAL_CLIENT_ID=${INFISICAL_CLIENT_ID}
-      - INFISICAL_CLIENT_SECRET=${INFISICAL_CLIENT_SECRET}
-      - INFISICAL_PROJECT_ID=${INFISICAL_PROJECT_ID}
-      - INFISICAL_ENV=${INFISICAL_ENV:-dev}
+      - INFISICAL_CLIENT_ID=${AGENT_CLIENT_ID}
+      - INFISICAL_CLIENT_SECRET=${AGENT_CLIENT_SECRET}
+      - INFISICAL_PROJECT_ID=${AGENT_PROJECT_ID}
+      - INFISICAL_ENV=${INFISICAL_ENV}
+    volumes:
+      - "infisical-config-vol:/app-secrets"
     entrypoint: ["/bin/sh", "-c"]
     command:
       - |
-        # 1. Crear directorios
         mkdir -p /etc/infisical
 
-        # 2. Crear la plantilla JSON (Usando un heredoc para evitar errores de comillas)
-        # Usamos 'EOF' entre comillas para que el shell NO intente expandir nada dentro
+        # Plantilla para el JSON de configuración general
         cat << 'EOF' > /etc/infisical/json.tmpl
         {
           {{- with secret "[[PROJECT_ID]]" "[[ENV]]" "/" }}
@@ -57,11 +50,10 @@ services:
         }
         EOF
 
-        # 3. Reemplazar los placeholders por las variables de entorno reales en la plantilla
         sed -i "s/\[\[PROJECT_ID\]\]/$INFISICAL_PROJECT_ID/g" /etc/infisical/json.tmpl
         sed -i "s/\[\[ENV\]\]/$INFISICAL_ENV/g" /etc/infisical/json.tmpl
 
-        # 4. Crear archivo de configuración del agente
+        # Configuración del Agente
         echo "
         infisical:
           address: 'https://app.infisical.com'
@@ -70,31 +62,18 @@ services:
           config:
             client-id: '$INFISICAL_CLIENT_ID'
             client-secret: '$INFISICAL_CLIENT_SECRET'
-            remove_client_secret_on_read: false
         sinks:
           - type: 'file'
             config:
               path: '/app-secrets/access-token'
         templates:
           - source-path: '/etc/infisical/json.tmpl'
-            destination-path: '/app-secrets/secrets.json'
+            destination-path: '/app-secrets/config.json'
             config:
               polling-interval: 60s
         " > /etc/infisical/config.yaml
 
-        echo "Iniciando Infisical Agent..."
         infisical agent --config=/etc/infisical/config.yaml
-    volumes:
-      - infisical-secrets:/app-secrets
-    networks:
-      - infisical-network
-    restart: always
 
 volumes:
-  infisical-secrets:
-    name: infisical-secrets
-
-networks:
-  infisical-network:
-    name: infisical-network
-    driver: bridge
+  infisical-config-vol:
