fix:update docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,18 +27,24 @@ services:
     image: "infisical/cli:0.18.0"
     container_name: infisical-agent-config
     environment:
+      # Estos vienen de tu archivo .env local
       - INFISICAL_CLIENT_ID=${AGENT_CLIENT_ID}
       - INFISICAL_CLIENT_SECRET=${AGENT_CLIENT_SECRET}
       - INFISICAL_PROJECT_ID=${AGENT_PROJECT_ID}
-      - INFISICAL_ENV=${INFISICAL_ENV}
+      - INFISICAL_ENV=${INFISICAL_ENV:-dev}
     volumes:
       - "infisical-config-vol:/app-secrets"
     entrypoint: ["/bin/sh", "-c"]
     command:
       - |
+        # 1. Crear directorio de configuración
         mkdir -p /etc/infisical
 
-        # Plantilla para el JSON de configuración general
+        # 2. Guardar las credenciales en ARCHIVOS (Evita el error de ruta vacía)
+        echo "$INFISICAL_CLIENT_ID" > /etc/infisical/client-id
+        echo "$INFISICAL_CLIENT_SECRET" > /etc/infisical/client-secret
+
+        # 3. Crear la plantilla JSON
         cat << 'EOF' > /etc/infisical/json.tmpl
         {
           {{- with secret "[[PROJECT_ID]]" "[[ENV]]" "/" }}
@@ -50,18 +56,21 @@ services:
         }
         EOF
 
+        # Reemplazar variables en la plantilla
         sed -i "s/\[\[PROJECT_ID\]\]/$INFISICAL_PROJECT_ID/g" /etc/infisical/json.tmpl
         sed -i "s/\[\[ENV\]\]/$INFISICAL_ENV/g" /etc/infisical/json.tmpl
 
-        # Configuración del Agente
+        # 4. Crear configuración del agente apuntando a los ARCHIVOS
+        # Nota: Usamos rutas de archivos en client-id y client-secret
         echo "
         infisical:
           address: 'https://app.infisical.com'
         auth:
           type: 'universal-auth'
           config:
-            client-id: '$INFISICAL_CLIENT_ID'
-            client-secret: '$INFISICAL_CLIENT_SECRET'
+            client-id: '/etc/infisical/client-id'
+            client-secret: '/etc/infisical/client-secret'
+            remove_client_secret_on_read: false
         sinks:
           - type: 'file'
             config:
@@ -73,6 +82,7 @@ services:
               polling-interval: 60s
         " > /etc/infisical/config.yaml
 
+        echo "Iniciando Infisical Agent con Machine Identity..."
         infisical agent --config=/etc/infisical/config.yaml
 
 volumes:
