feat:cors añadidos

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ INFISICAL_HOT_PROJECT_ID=your_hot_project_id
 INFISICAL_COLD_CLIENT_ID=your_cold_client_id
 INFISICAL_COLD_CLIENT_SECRET=your_cold_client_secret
 INFISICAL_COLD_PROJECT_ID=your_cold_project_id
+
+# CORS Configuration
+# Comma-separated list of allowed origins (e.g., http://localhost:3000,https://example.com)
+# Use * to allow all origins (not recommended for production)
+CORS_ORIGIN=http://localhost:3000
